Fix table alignment for uneven player counts

--- a/lasertag/home/static/home/game_action.css
+++ b/lasertag/home/static/home/game_action.css
@@ -56,6 +56,11 @@
     color: MediumBlue;
 }
 
+.playerTable {
+    display: inline-block;
+    vertical-align: top;
+}
+
 #warning_timer {
     visibility: hidden;
     width: 50%;
